--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   outline: none !important;
 }
 
+html, body, #root, #root>div {
+  height: 100%
+}
+
 body {
   background-color: #1A1A1F;
   color: #fff;
@@ -34,6 +38,16 @@ body {
   overflow: hidden;
 }
 
+.Home {
+  min-height: calc(100vh - (75px + 100px + 25px + 25px));
+  display: flex;
+  align-items: center;
+}
+
+.Projects {
+  min-height: calc(100vh - (75px + 100px + 25px + 25px));
+}
+
 #header-logo {
   font-size: 20px;
   font-weight: 500;
@@ -51,7 +65,7 @@ li {
 
 .header-link {
   text-decoration: none;
-  letter-spacing: 3px;
+  letter-spacing: 1.9px;
   font-size: 14px;
   color: #454757;
   font-weight: 500;
@@ -74,7 +88,7 @@ li {
 #menu-line {
   background-color: #E16565;
   position: absolute;
-  top: 25px;
+  top: 26px;
   width: 0;
   height: 2px;
   transition: all 300ms;
@@ -87,7 +101,6 @@ li {
 }
 
 #welcome {
-  margin-top: 170px;
   text-align: center;
 }
 
@@ -120,4 +133,19 @@ li {
   animation-delay: 0.2s;
   -webkit-transition: width 0.5s, height 0.5s, margin 0.5s, font-size 0.5s; /* For Safari 3.1 to 6.0 */
   transition: width 0.5s, height 0.5s, margin 0.5s, font-size 0.5s;
+}
+
+.footer {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #454757;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+
+.footer i {
+  margin-left: 30px;
 }
