--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ body {
   letter-spacing: 1px;
 }
 
+h2 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
 .smallBody {
   width: 80%;
   max-width: 1100px;
@@ -46,6 +51,8 @@ body {
 
 .Projects {
   min-height: calc(100vh - (75px + 100px + 25px + 25px));
+  display: flex;
+  align-items: center;
 }
 
 #header-logo {
@@ -133,6 +140,43 @@ li {
   animation-delay: 0.2s;
   -webkit-transition: width 0.5s, height 0.5s, margin 0.5s, font-size 0.5s; /* For Safari 3.1 to 6.0 */
   transition: width 0.5s, height 0.5s, margin 0.5s, font-size 0.5s;
+}
+
+#projects-desc {
+  color: #F8D37B;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  margin-top: 8px;
+}
+
+.projects-grid {
+  position: absolute;
+  top:0;bottom:0;right:0;left:0;
+  width: 90%;
+  max-width: 1300px;
+  margin: 0 auto;
+  margin-top: 208px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-div {
+  background-color: #292930;
+  width: 22%;
+  height: 300px;
+  border-radius: 10px;
+  margin: 0 20px;
+  -webkit-transition: width 0.5s, height 0.5s, margin 0.5s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.5s, height 0.5s, margin 0.5s;
+}
+
+.project-div:hover {
+  height: 350px;
 }
 
 .footer {
