--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,10 @@ h2 {
   align-items: center;
 }
 
+.relative {
+  position: relative;
+}
+
 #header-logo {
   color: #000;
   font-size: 25px;
@@ -118,13 +122,16 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .about-grid {
+  height: 620px;
   width: 40%;
 }
 
 .projects-grid {
+  height: 620px;
   width: 50%;
   display: flex;
   flex-direction: row;
