--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,10 @@ h2 {
 }
 
 .Home {
-  min-height: 620px;
+  min-height: 560px;
   display: flex;
   align-items: center;
+  transition: background-color 300ms ease-in-out;
 }
 
 .relative {
@@ -60,6 +61,7 @@ h2 {
   font-family: 'Noah';
   font-weight: 700;
   letter-spacing: 0.3px;
+  transition: color 150ms ease-in-out;
 }
 
 #about-title-div {
@@ -94,8 +96,14 @@ h2 {
   transition: width 0.5s, height 0.5s, margin 0.5s, font-size 0.5s;
 }
 
-#links {
+.linksDiv {
   margin-top: 80px;
+}
+
+.social {
+  position: relative;
+  float: left;
+  margin-right: 30px;
 }
 
 .link {
@@ -125,12 +133,12 @@ h2 {
 }
 
 .about-grid {
-  height: 620px;
+  height: 560px;
   width: 40%;
 }
 
 .projects-grid {
-  height: 620px;
+  height: 560px;
   width: 50%;
   display: flex;
   flex-direction: row;
@@ -150,6 +158,11 @@ h2 {
   margin: 30px 0;
   -webkit-transition: width 0.5s, height 0.5s; /* For Safari 3.1 to 6.0 */
   transition: width 0.5s, height 0.5s;
+}
+
+.iconAnim {
+  animation-duration: 200ms;
+  animation-iteration-count: 1;
 }
 
 #project1 {
