--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,26 @@
   src: url(fonts/Noah-Bold.woff);
   font-weight: 700;
 }
+@font-face {
+  font-family: "Metropolis";
+  src: url(fonts/metropolis/Metropolis-Regular.woff);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(fonts/metropolis/Metropolis-Medium.woff);
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(fonts/metropolis/Metropolis-SemiBold.woff);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Metropolis";
+  src: url(fonts/metropolis/Metropolis-Bold.woff);
+  font-weight: 700;
+}
 
 * {
   margin: 0;
@@ -26,7 +46,7 @@ html, body, #root, #root>div {
 body {
   background-color: #fff;
   color: #454757;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Hind Guntur', sans-serif;
   letter-spacing: 1px;
 }
 
@@ -74,23 +94,22 @@ h2 {
 }
 
 #about-title {
+  font-family: 'Metropolis', sans-serif;
   color: #000;
   font-size: 30px;
   font-weight: 600;
-  letter-spacing: 2.5px;
   line-height: 48px;
 }
 
 #about-subtitle {
-  font-weight: 400;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
 }
 
 #about-desc {
-  font-family: 'Open Sans', sans-serif;
   position: relative;
   color: #454757;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 400;
   letter-spacing: 1px;
   margin-top: 35px;
@@ -111,6 +130,7 @@ h2 {
 }
 
 .link {
+  line-height: 18px;
   position: relative;
   color: #454757;
   float: left;
