--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,14 +1,4 @@
 @font-face {
-  font-family: Noah;
-  src: url(fonts/Noah-Regular.woff);
-  font-weight: 400;
-}
-@font-face {
-  font-family: Noah;
-  src: url(fonts/Noah-Bold.woff);
-  font-weight: 700;
-}
-@font-face {
   font-family: "Metropolis";
   src: url(fonts/metropolis/Metropolis-Regular.woff);
   font-weight: 400;
@@ -47,7 +37,7 @@ body {
   background-color: #fff;
   color: #454757;
   font-family: 'Hind Guntur', sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 h2 {
@@ -77,8 +67,8 @@ h2 {
 
 #header-logo {
   color: #000;
-  font-size: 25px;
-  font-family: 'Noah';
+  font-size: 24px;
+  font-family: 'Source Sans Pro';
   font-weight: 700;
   letter-spacing: 0.3px;
   transition: color 150ms ease-in-out;
@@ -253,5 +243,9 @@ h2 {
 
 /*** MOBILE ***/
 .Home-mobile {
-  padding-top: 30px;
+  padding-top: 40px;
+}
+
+footer {
+  padding: 30px 0 50px 0;
 }
