--- a/src/components/style.css
+++ b/src/components/style.css
@@ -45,6 +45,10 @@ h2 {
   font-weight: 500;
 }
 
+a {
+  display: flex;
+}
+
 .smallBody {
   position: relative;
   width: 80%;
@@ -115,7 +119,6 @@ h2 {
   color: #454757;
   font-size: 17px;
   font-weight: 400;
-  letter-spacing: 1px;
   margin-top: 35px;
   line-height: 32px;
   animation-delay: 0.2s;
@@ -135,7 +138,16 @@ h2 {
 .social {
   position: relative;
   float: left;
-  margin-right: 30px;
+  margin-right: 20px;
+  text-decoration: none;
+  color: #E16565;
+  -webkit-transition: transform 150ms ease-in-out;
+  transition: transform 150ms ease-in-out;
+  padding: 5px;
+}
+
+.social:hover {
+  transform: translateY(-4px);
 }
 
 .link {
@@ -145,23 +157,24 @@ h2 {
   float: left;
   margin-right: 40px;
   text-decoration: none;
-  border: 0;
-  border-style: solid;
-  border-bottom-width: 1px;
-  border-color: #C4C4C4;
-  padding-bottom: 4px;
-  transition: border-color 200ms ease-in-out;
+  font-weight: 600;
+  padding-bottom: 1px;
+  -webkit-transition: padding 150ms ease-in-out;
+  transition: padding 150ms ease-in-out;
 }
 
 .link:hover {
-  border-color: #E16565;
-  color: #000;
+  border: 0;
+  border-style: solid;
+  border-bottom-width: 2px;
+  padding-bottom: 4px;
 }
 
 .link.mobile {
   color: #E16565;
   border: 0;
   font-weight: 600;
+  z-index: 1000;
 }
 
 .home-grid {
@@ -195,8 +208,8 @@ h2 {
   height: 250px;
   border-radius: 10px;
   margin: 30px 0;
-  -webkit-transition: transform 250ms ease-in-out; /* For Safari 3.1 to 6.0 */
-  transition: transform 250ms ease-in-out;
+  -webkit-transition: transform 250ms ease-in-out, height 250ms ease-in-out, width 250ms ease-in-out, border-radius 250ms ease-in-out; /* For Safari 3.1 to 6.0 */
+  transition: transform 250ms ease-in-out, height 250ms ease-in-out, width 250ms ease-in-out, border-radius 250ms ease-in-out;
 }
 
 .project-div:hover {
@@ -204,9 +217,9 @@ h2 {
 }
 
 .project-div.mobile {
-  width: 100vw;
+  width: 90%;
+  margin: 30px auto;
   cursor: auto;
-  border-radius: 0;
 }
 
 .project-div.mobile:hover {
@@ -224,7 +237,7 @@ h2 {
 }
 
 #project2 {
-  background-color: #55AFEF;
+  background-color: #519DF2;
   display: flex;
 }
 
@@ -234,7 +247,7 @@ h2 {
 }
 
 #project4 {
-  background-color: #FBAB7E;
+  background-color: #5fcc9c;
   display: flex;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -247,5 +260,34 @@ h2 {
 }
 
 footer {
-  padding: 30px 0 50px 0;
+  padding: 30px 0;
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 1000px) {
+  .project-div.mobile {
+    height: 350px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .project-div.mobile {
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .project-div.mobile {
+    height: 250px;
+    width: 100%;
+    border-radius: 0;
+  }
+  .footer-div {
+    flex-direction: column;
+  }
 }
